# Autonomous-Al-powered-SRE-Agent

./: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  action.yml  alembic.ini  docker-compose.yml  pyproject.toml  run_migrate.py
.github/: app.yml  copilot-instructions.md
.github/workflows/: analyze.yml
alembic/: env.py
alembic/versions/: 001_initial_pipeline_events.py  002_add_users_auth.py  009_phase4_consensus_core.py
docker/: entrypoint.sh
docs/: ops.md  pipeline.md
frontend/: .dockerignore  Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Dashboard.tsx  FailureDetails.tsx  Login.tsx
frontend/src/styles/: index.css
src/sre_agent/: __init__.py  celery_app.py  config.py  database.py  main.py
src/sre_agent/ai/: __init__.py  fix_generator.py  guardrails.py  llm_provider.py  output_parser.py  prompt_builder.py
src/sre_agent/api/: artifacts.py  auth.py  dashboard.py  explainability.py  health.py  notifications.py  users.py
src/sre_agent/auth/: __init__.py  jwt_handler.py  oauth_providers.py  (+2 more)
test-harness/: check_github_status.py  run_harness.py  test_webhook_debug.py
test-harness/sample-app/: config.py  failure_injections.py
test-harness/testing-agent/: __init__.py  config.py  reporter.py  validator.py
tests/: conftest.py
tests/api/: test_explain_endpoints.py  test_webhook_dedupe_and_throttle.py
tests/integration/: test_webhook_endpoint.py
tests/unit/: test_dashboard_events.py  test_log_parser.py  test_normalizer.py  test_repository_config.py  test_security.py
(+91 files in other folders)
