[tool.poetry]
name = "sre-agent"
version = "0.1.0"
description = "Self-Healing CI/CD Platform - Autonomous AI-powered SRE Agent"
authors = ["SRE Agent Team"]
readme = "README.md"
packages = [{include = "sre_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.0"
python-json-logger = "^2.0.7"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
httpx = "^0.26.0"
numpy = "^2.0.0"

[tool.poetry.group.ml.dependencies]
# Optional ML dependencies for similarity search
sentence-transformers = "^2.2.0"
faiss-cpu = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
testcontainers = "^3.7.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
